# uk-birdcast

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml
configs/: aloft_crosswalk.example.json  birdcast_uk_object_store.example.toml  gamm_intensity_tweedie_experiment.json  gamm_mtr_covariate_k14_experiment.json  gamm_mtr_covariate_k6_experiment.json  gamm_mtr_no_radar_effect_experiment.json  gamm_mtr_spatial_k14_experiment.json  gamm_mtr_spatial_k6_experiment.json  gamm_mtr_temporal_detailed_experiment.json  gamm_mtr_temporal_smooth_experiment.json  gamm_mtr_thermal_moisture_interaction_experiment.json  gamm_mtr_wind_interaction_experiment.json  gamm_uk_holdout_component_publication.json  gamm_uk_holdout_component_selection.json  gamm_uk_holdout_selected.json  gamm_vector_wind_offset_experiment.json  gamm_vertical_wind_700_offset_experiment.json  gamm_vertical_wind_925_interaction_experiment.json  gamm_vertical_wind_925_interaction_with_850_experiment.json  gamm_vertical_wind_925_offset_experiment.json  gamm_vertical_wind_925_vector_experiment.json  gamm_vertical_wind_layers_experiment.json
containers/: birdcast-era5.def  birdcast-gamm.def
docs/: IMPLEMENTATION.md
reports/: aloft_external_model_evaluation_2025-07-14_to_2026-07-13.md  uk_gamm_holdout_and_nearby_vpts_diagnostics_2025-07-14_to_2026-07-13.md  uk_gamm_iteration_log_2025-07-14_to_2026-07-13.md  uk_gamm_selection_2025-07-14_to_2026-07-13.md
scripts/: assemble_gamm_component_selection.py  build_vertical_grid_day.sh  compare_uk_aloft_nearby_vpts.py  fit_gamm.R  fit_xgboost.py  (+7 more)
(+90 files in other folders)
