[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdcast-uk"
version = "0.2.0"
description = "Incremental UK weather-radar bird migration products and ERA5 features."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Ryan R. Neely III"},
]
dependencies = []

[project.optional-dependencies]
birdcast = [
  "earthkit-data>=1.0.2,<2",
  "h5netcdf>=1.3",
  "netCDF4>=1.6",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "tomli>=2; python_version < '3.11'",
  "xarray>=2024.1",
  "zarr>=2.16",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
birdcast-uk = "birdcast_uk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
birdcast_uk = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
